# legalCrawlAnalysis

./: .gitignore  3PHASE_SYSTEM.md  QUICKSTART.md  README.md  analysis_progress.json  pyproject.toml
analysis_output/CC-MAIN-2025-08/: final_3phase_report.json  final_3phase_report.md
analysis_output/CC-MAIN-2025-08/phase3_passages_and_warc/: CC-MAIN-20250206114225-20250206144225-00000.warc_legal_docs.warc_gpt_analysis.json  CC-MAIN-20250206114225-20250206144225-00000.warc_legal_docs.warc_gpt_analysis.parquet
legal_crawl_analysis/: __init__.py  analyzer.py  config.py  detector.py  extractor.py  fetcher.py  gpt_analyzer.py  main.py  models.py  setup.py
